[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (black-compatible)
]

[tool.ruff.isort]
known-first-party = ["rapidrmf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
markers = [
  "integration: integration tests requiring database",
  "unit: unit tests without database",
  "slow: slow running tests",
  "smoke: smoke tests",
]
# Database URL for tests - set via environment
# DATABASE_URL=postgresql://test_user:test_password@localhost:5432/rapidrmf_test
