[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (black-compatible)
  "B008",  # ignore Typer option placement errors
]

[tool.ruff.lint.isort]
known-first-party = ["auditly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
markers = [
  "integration: integration tests requiring database",
  "unit: unit tests without database",
  "slow: slow running tests",
  "smoke: smoke tests",
]
# Database URL for tests - set via environment
# DATABASE_URL=postgresql://test_user:test_password@localhost:5432/auditly_test
