[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (black-compatible)
  "B008",  # ignore Typer option placement errors
]

[tool.ruff.lint.isort]
known-first-party = ["auditly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
[project]
name = "auditly"
version = "0.4.0"
description = "Auditly: Compliance automation API and CLI"
authors = ["Auditly Team <team@auditly.io>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.109.2",
  "uvicorn>=0.27.1",
  "pydantic>=2.6.4",
  "PyYAML>=6.0.2",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "jinja2>=3.1.4",
  "requests>=2.32.3",
  "boto3>=1.34.34",
  "rich>=13.7.1",
  "ruff>=0.1.14",
  "mypy>=1.8.0",
  "pydocstyle>=6.3.0"
]

[project.scripts]
auditly = "auditly.cli:app"

[tool.pipx]
main = "auditly.cli:app"
include_apps = true
